Fix top and bottom spacing issue on woza list

--- a/src/Woza/WozaList/woza-list.css
+++ b/src/Woza/WozaList/woza-list.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     max-width: 660px;
-    margin: 0 auto;
+    margin: -0.5em auto;
 }
 
 .ot-woza-list-wrapper.mode-strip{
